--- a/index.html
+++ b/index.html
@@ -455,8 +455,7 @@
                     <div class="text-center">
                         <div
                             class="w-32 h-32 bg-gradient-to-r from-blue-500 to-cyan-500 rounded-full flex items-center justify-center mx-auto mb-6">
-                            <i class="fab fa-angular text-6xl text-white"></i>
-                        </div>
+                            <img src="Profile.JPG" alt="Profile" class="w-full h-full object-cover" style="border-radius: 4.75rem;">                        </div>
                         <h3 class="text-2xl font-bold text-blue-300 mb-2">Senior Systems Engineer</h3>
                         <p class="text-slate-400">Infosys Limited</p>
                         <div class="flex justify-center gap-4 mt-6">
